# yolov7_vehicle_plate_det

./: README.md
PaddleOCR/: ocr_process.py  run_ocr.sh
PaddleOCR/configs/rec/: plate_rec_mv3_none_bilstm_ctc.yml
PaddleOCR/configs/rec/PP-OCRv3/: plate_ch_PP-OCRv3_rec.yml
PaddleOCR/ppocr/postprocess/: rec_postprocess.py
PaddleOCR/ppocr/utils/dict/: plate_dict.txt
PaddleOCR/tools/: infer_rec.py  plate_infer_rec.py  program.py  train.py
PaddleOCR/tools/infer/: predict_rec.py
ev_sdk/: .gitignore  CMakeLists-Copy1.txt  CMakeLists.txt  for_new_instance.sh  gen_trt.sh  re_build.sh  run.sh  test-Copy1.sh  test.sh  tmp.txt
ev_sdk/config/: algo_config.json  algo_config_1.json  algo_config_2.json  algo_config_ori.json
ev_sdk/src/: .SampleAlgorithm.cpp.swp  .ji.cpp.swp  Configuration.hpp  SampleAlgorithm-Copy1.txt  SampleAlgorithm.cpp  SampleAlgorithm.hpp  evQueue.h  ji.cpp  ji.py
ev_sdk/src/paddle_src/: CMakeLists-Copy1.txt  CMakeLists-Copy2.txt  CMakeLists.txt
ev_sdk/src/paddle_src/external-cmake/: auto-log.cmake
ev_sdk/src/paddle_src/include/: ocr_cls.h  ocr_det.h  ocr_rec.h  paddleocr.h  paddleocrh.txt
ev_sdk/src/paddle_src/src/: args.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  paddleocrcpp.txt  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
ev_sdk/src/paddle_src/tools/: build.sh  build_opencv.sh
ev_sdk/src/yolo_src/: CMakeLists-Copy1.txt  CMakeLists.txt  yolodet.cpp  yolodet.h
ev_sdk/src/yolo_src/application/: app_bert.cpp
ev_sdk/src/yolo_src/application/app_centernet/: centernet.hpp
ev_sdk/src/yolo_src/application/app_python/: interface.cpp
ev_sdk/src/yolo_src/application/app_yolo/: yolo.cpp  yolo.hpp  yolo_decode.cu
ev_sdk/src/yolo_src/application/app_yolo_fast/: yolo_fast.cpp  yolo_fast.hpp  yolov5_decode.cu
ev_sdk/src/yolo_src/application/app_yolo_gpuptr/: yolo_gpuptr.cpp  yolo_gpuptr.hpp  yolo_gpuptr_decode.cu
ev_sdk/src/yolo_src/application/common/: centernet_detector.hpp  object_detector.hpp  vehicle_detector.hpp
ev_sdk/src/yolo_src/application/tools/: deepsort.cpp
ev_sdk/src/yolo_src/direct/: direct_mae.cpp
infer_python/: ji-Copy1.py  ji_det_trt.py  ji_final.py  ji_moxing.py  ji_moxing_ori.py  ji_test.py  ji_trt.py
yolov7-main/: test.py  train.py  xml2labels.py
yolov7-main/data/: hyp.scratch.vehicle_custom.yaml  vehicle.yaml
yolov7-main/models/: yolo.py
yolov7-main/utils/: autoanchor.py  datasets.py  general.py  loss.py  metrics.py
yolov7_det/yolov7-main/: YOLOv7_reparameterization.py  export_trt.py  rep_onnx.sh  run.sh  split_train_val.py  temp.py  train.py  xml2labels.py
yolov7_det/yolov7-main/cfg/deploy/: vehicle_yolov7_deploy.yaml
yolov7_det/yolov7-main/cfg/training/: vehicle_yolov7.yaml
yolov7_det/yolov7-main/data/: hyp.scratch.vehicle_custom.yaml  vehicle.yaml
yolov7_det/yolov7-main/models/: ori_training_yolo.py  yolo.py  yolo2onnx.py
yolov7_det/yolov7-main/utils/: datasets.py  general.py  loss.py  metrics.py  plots.py
